    The Contact => Bugs and GemsTracker pages have been refreshed with a default bugs url (use Roles to make invisible)
    Editing staff and organizations uses extra defaults for smoother creation
    Different respondent search, edit and show screens can be set for a user group
    Different respondent edit and show screens can be set for each organization, overruling user group settings
Export improvements:
    Answers from inactive patients can now be exported
    Depending on rights patient numbers, patient gender and birth year and month can be exported with answers
Rights:
    The types of staff that a user can create/edit are determined at the group level
    A default group for new users can be set at the user group level
    Roles only determine what menu items are allowed, you no longer need to have a right to assign it to another staff
    Private data can now be hidden or (partially) masked for groups, e.g. researchers need not see patient names
    Added "site administrator" role and group between local admin and super admin
    Administrators may now have the right to switch the used group to any they may set
Security:
    The full Gems version number is only displayed after login
    All recalculate, check, synchronize, patch and run commands log the item they are started for
    Delete, deactivate and reactivate actions are logged correctly
    New security headers and meta tags can be set from the project.ini
    All staff users have to follow the password rules for staff, even if their role does not inherit staff
Programmability:
    Before field save events allows changing the fields after their new values have been calculated
    Respondent changed events can be set at the organization level
    It is easier to change part of the display in ShowTrackTokenSnippet
Bugs
    Blocked users were not blocked
    The APC Cache was cleared incorrectly
    The var/tmp directory is created when needed and it does not exist
Testing: